<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.radiotest.RadioTest"
    android:orientation="vertical"
     >

    <TextView
        android:layout_marginLeft="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/hello_world" />
    <TextView 
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        />
    
    <RadioGroup 
        android:id="@+id/gendergroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <RadioButton
            android:id="@+id/malebtn"
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </RadioButton>
        <RadioButton
            android:id="@+id/femalebtn"
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </RadioButton>
        
    </RadioGroup>
    <TextView 
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="请选择你的兴趣爱好"
        />
    <CheckBox
        android:id="@+id/swim"
        android:text="@string/swim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </CheckBox>
    <CheckBox
        android:id="@+id/run"
        android:text="@string/run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </CheckBox>
    <CheckBox
        android:id="@+id/read"
        android:text="@string/read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </CheckBox>
    
    <Button 
        android:layout_marginLeft="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="提交"
        android:background="@drawable/shape"
        />

</LinearLayout>
